- pngwolf-zopli 1.1.1 - https://github.com/jibsen/pngwolf-zopfli
- rehuff - http://wiki.xiph.org/Rehuff
- Tidy 5.4.0 - http://www.html-tidy.org
- TruePNG 0.6.2.2 - http://x128.ho.ua/pngutils.html
- UPX 3.93 - https://upx.github.io
- ZLib 1.2.8 - http://www.zlib.net
- zRecompress 2.12 - http://nikkhokkho.sourceforge.net/static.php?page=zRecompress


X.XX - YYYY/MM/DD
- Updated Ghostscript to 9.21.
- Updated Guetzli to 1.0.
- Updaded Tidy to 5.4.0.
- Updated libwebp to 0.6.0.
- Updated pingo to 0.74.
- Updated Leanify to 0.4.3.184 daily binaries.
- Updated ImageMagick 7.0.5.2 with HDRI support.


9.60 - 2017/02/18
- Brand new FileOptimizer icon (Thanks Dorel Megaleechers.com).
- Added descriptions in INI file to make it easier and safer to be modified.
- Migrated from smpdf to cpdf (maadjordan).
- Fixed a bug that could show optimized sizes larger than original, when the plugin execution increased it. It was only cosmetic, and optimized size, never was larger (Pepper Andrino).
- Ghostrcript is automatically disabled when no downsampling is selected, because it is always downsampling images even if -dDownsampleColorImages=false -dDownsampleGrayImages=false -dDownsampleMonoImages=false are specified (olavrb).
- Make sure TempDirectory is created to avoid certain plugins crash (Newtomic).
- Patched Guetzli and Mutool plugins to be compatible with Windows XP (thanks Jaff for the patch).
- Switched to libwebp without WIC codes to keep Windows XP compatibility (Jaff).
- Fixed not properly passing PDF profile to Ghostcript (#9 Runer112).
- Updated UPX to 3.93.
- Updated libwebp to 0.6.0 RC3.
- Updated mozjpeg to 3.2 (Thanks AiZ).
- Updated Leanify to 0.4.3.180 daily binaries.
- Updated ImageMagick 7.0.4.7 with HDRI support.
- Updated pingo to 0.59.
- Updated pngquant to 2.8.1 (dado023).
- Some minor optimizations and code cleanup.

9.50 - 2017/01/10