@@ -178,6 +178,7 @@ ndo
 
 
 X.XX - YYYY/MM/DD
+- Added INI setting IncludeMask=. If not empty, only files containing this mask (substring) on name or path will be included from optimization (user202jkl).
 - Updated Ghostscript to 9.21.
 - Updated Guetzli to 1.0.
 - Updaded Tidy to 5.4.0.
